Fix carousel alignment

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -145,7 +145,6 @@ section {
 
 ul {
   display: flex;
-  gap: 1rem;
   font-size: 0.9rem;
   list-style: none;
   padding: 0;
